# alit

./: README.md  ROADMAP.md  pyproject.toml
alit/scripts/: db.py  lit.py
alit/skill/: SKILL.md
alit/tests/: test_core.py
literature/scripts/: db.py  lit.py  pagerank.py  recommend.py  search.py  synthesize.py
literature/skill/: SKILL.md
literature/tests/: test_core.py
