[project]
name = "agent-lit"
version = "0.5.0"
description = "Persistent memory for AI agents doing literature review with your taste."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{name = "Hangyu Zhou"}]
keywords = ["literature-review", "research", "agents", "sqlite", "alit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]

[project.scripts]
alit = "alit.scripts.lit:main"

[project.urls]
Repository = "https://github.com/Zhou-Hangyu/alit"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["alit"]

[tool.uv]
dev-dependencies = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["alit/tests"]
